# rich_prompt

./: Cargo.toml  README.md  config.toml
src/: main.rs
