[package]
name = "rich_prompt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = { version = "0.3", default-features = false }
async-openai = "0.17"
clap = { version = "4", features = ["derive"] }
log = "0.4"
log4rs = "1"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
reqwest = { version = "0.11", default-features = false}
strfmt = "0.2"
rand = "0.8"